--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>Resource2pid-perl by fkuhn</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
+    <div class="wrapper">
+      <header>
         <h1>Resource2pid-perl</h1>
-        <h2>Perl and CGI version of resource2pid to function with older server infrastructures</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/fkuhn/resource2pid-perl/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/fkuhn/resource2pid-perl/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/fkuhn/resource2pid-perl" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
+        <p>Perl and CGI version of resource2pid to function with older server infrastructures</p>
+        <p class="view"><a href="https://github.com/fkuhn/resource2pid-perl">View the Project on GitHub <small>fkuhn/resource2pid-perl</small></a></p>
+        <ul>
+          <li><a href="https://github.com/fkuhn/resource2pid-perl/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/fkuhn/resource2pid-perl/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/fkuhn/resource2pid-perl">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a id="resource2pid-version-10" class="anchor" href="#resource2pid-version-10" aria-hidden="true"><span class="octicon octicon-link"></span></a>resource2pid version 1.0</h1>
 
@@ -280,7 +279,11 @@ edit the opened file by adding the job in the crontab format, e.g.:</p>
 </ul>
       </section>
     </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/fkuhn">fkuhn</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
